--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         **This is just a fake portfolio. All the projects and contact details
         given are not real.
       </p>
-      <p>© Created for freeCodeCamp</p>
+      <p>© Created for <a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer"> freeCodeCamp </a></p>
     </footer>
   </body>
 </html>
